--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.7"
-  }
+  },
+  
+    "minifySvg": false
+
 }
